--- a/TechGet.csproj
+++ b/TechGet.csproj
@@ -79,6 +79,7 @@
     <Compile Include="Repositories\ProcurationRepository.cs" />
     <EmbeddedResource Include="FrmInput.resx">
       <DependentUpon>FrmInput.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmLogin.resx">
       <DependentUpon>FrmLogin.cs</DependentUpon>
