--- a/TechGet.csproj
+++ b/TechGet.csproj
@@ -68,6 +68,12 @@
     <Compile Include="FrmProcurations.Designer.cs">
       <DependentUpon>FrmProcurations.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmUpdate.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmUpdate.Designer.cs">
+      <DependentUpon>FrmUpdate.cs</DependentUpon>
+    </Compile>
     <Compile Include="Models\Employee.cs" />
     <Compile Include="Models\FundingSource.cs" />
     <Compile Include="Models\Person.cs" />
@@ -86,6 +92,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FrmProcurations.resx">
       <DependentUpon>FrmProcurations.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmUpdate.resx">
+      <DependentUpon>FrmUpdate.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
